Package: R.filesets
===================

Version: 2.9.0-9000 [2016-01-01]
o Now file sizes are reported using IEC binary prefixes, i.e.
  bytes, KiB, MiB, GiB, TiB, ..., YiB.
o Preparing to make the default pathname for GenericDataFile() to
  become NA_character_.  It is currently NULL, but the goal is to
  enforce length(pathname) to be one.
o BUG FIX: getOneFile() on a GenericDataFileSet with a single
  missing file would give an error.


Version: 2.9.0 [2015-10-20]
o Add support for dsApply(..., .parallel="future"), which utilizes
  the future package.
o CLEANUP: Defunct methods dropped.
o Package now requires R (>= 3.1.1) released July 2014. This allows
  us to use BioC (>= 3.0) (October 2014).


Version: 2.8.0 [2015-08-06]
o Added support for sortBy(..., by="mixedroman") for GenericDataFileSet.
o Now commentChar="" and commentChar=FALSE also disables searching for
  comment characters (just as commentChar=NULL) for TabularTextFile.
o Explicit import of 'utils' functions.
o Package requires R (>= 3.1.0) released March 2014.
o BUG FIX: readDataFrame() for TabularTextFile with column-names
  translators set, could give an error "Number of read data columns
  does not match the number of column headers: ...". This was due to
  an update in utils::read.table() as of R v3.2.1 svn rev 68831.


Version: 2.7.2 [2015-05-24]
o ROBUSTNESS: Added getFullNames(..., onRemapping) to GenericDataFileSet
  to warn/err on full-name translations that generates inconsistent
  fullname-to-index maps before and after.
o CONSISTENCY: Analogously to lapply(), dsApply() returns a list
  with names corresponds to the full names of the data set.
o BUG FIX: linkTo(..., skip=TRUE) would give error "No permission to
  modify existing file: ..." also in the case when the proper link
  already exists and there is no need to create a new one.
o BUG FIX: Now getReadArguments() for TabularTextFile let duplicated
  named 'colClasses' entries override earlier ones, e.g.